# brown-globus-utils

./: .gitignore  README.rst  pyproject.toml
brown_globus_utils/: submit_transfer.py  utils.py
tests/: test_brown_globus_utils.py
